<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/about_card_vertical_margin"
    android:layout_marginEnd="@dimen/about_card_horizontal_margin"
    android:layout_marginLeft="@dimen/about_card_horizontal_margin"
    android:layout_marginRight="@dimen/about_card_horizontal_margin"
    android:layout_marginStart="@dimen/about_card_horizontal_margin"
    app:cardCornerRadius="@dimen/about_card_corner_radius"
    tools:showIn="@layout/fragment_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sponsors_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_card_content_margin"
            android:text="@string/about_sponsors"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/pistachio_dark"/>

        <ImageView
            android:id="@+id/estimote_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/about_card_sponsor_height"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/estimote_sponsor"/>

        <TextView
            android:id="@+id/bronze_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/about_card_content_margin"
            android:layout_marginStart="@dimen/about_card_content_margin"
            android:layout_marginTop="@dimen/about_card_content_margin"
            android:text="@string/about_bronze_sponsor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/about_card_content_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/jetbrains_sponsor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_card_sponsor_height"
                    android:contentDescription="@null"
                    android:src="@drawable/jetbrains_sponsor"/>

                <TextView
                    android:id="@+id/virtual_sponsor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/about_card_content_margin"
                    android:layout_marginStart="@dimen/about_card_content_margin"
                    android:layout_marginTop="@dimen/about_card_content_margin"
                    android:text="@string/about_virtual_sponsor"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/travel_sponsor_logo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_card_sponsor_height"
                    android:contentDescription="@null"
                    android:src="@drawable/travel_sponsor"/>

                <TextView
                    android:id="@+id/travel_sponsor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/about_card_content_margin"
                    android:layout_marginStart="@dimen/about_card_content_margin"
                    android:layout_marginTop="@dimen/about_card_content_margin"
                    android:text="@string/about_travel_sponsor"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>